[metadata]
name = ticlib
version = attr: ticlib.__version__
author = Julien Phalip
author_email = jphalip@gmail.com
description = Python library to drive Pololu Tic stepper motor controllers
long_description = file: README.md
license = BSD-2-Clause
long_description_content_type = text/markdown
url = https://github.com/jphalip/ticlib
project_urls =
    Bug Tracker = https://github.com/jphalip/ticlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src